# fast-mcp

./: .gitignore  README.md  farmos_server.py  pyproject.toml  requirements.txt  setup.py  static_data.py  test_server.py
