[project]
name = "farmos-mcp"
version = "0.1.0"
description = "Farm OS MCP server using FastMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "farmos_server.py",
    "static_data.py",
    "test_server.py",
    "setup.py",
]

